--- a/debian.oem/changelog
+++ b/debian.oem/changelog
@@ -1,3 +1,9 @@
+linux-oem-6.17 (6.17.0-1000.0) noble; urgency=medium
+
+  * Initial changelog entry.
+
+ -- Kuan-Ying Lee <kuan-ying.lee@canonical.com>  Mon, 01 Sep 2025 13:34:11 +0800
+
 linux (6.17.0-3.3) questing; urgency=medium
 
   * questing/linux: 6.17.0-3.3 -proposed tracker (LP: #2121512)
